CIVIMM-249: Fix top spacing for the civicrm form blocks on the pages

--- a/scss/civicrm/common/_tables.scss
+++ b/scss/civicrm/common/_tables.scss
@@ -191,4 +191,17 @@ table {
       }
     }
   }
+
+  .crm-form-block {
+    display: inline-block;
+    width: 100%;
+
+    > .form-layout-compressed {
+      clear: both;
+
+      &:first-child {
+        margin-top: 20px;
+      }
+    }
+  }
 }
